Fix alignment of icon in navigation menu.

--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -139,6 +139,7 @@ sub {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .light-text {
@@ -160,6 +161,7 @@ sub {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .night .dark-text {
